Tue Aug  3 14:50:14 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkicontheme.c (add_size): Add missing parens.
	(#149190, Morten Welinder)

Tue Aug  3 14:29:49 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_menu_fill): Remove 
	accidentally committed debug code.

Tue Aug  3 01:19:12 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_relayout_item): Optimize 
	for the case that row_column and col_column are unset.  
	(#148868, Lorenzo Gil Sánchez)

Mon Aug  2 21:52:45 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gdk/x11/gdkwindow-x11.c (ensure_sync_counter): New
	function. Make sure the sync counter is recreated when a window is
	reparented to become a toplevel. (#148358)

2004-08-02  Matthias Clasen  <mclasen@redhat.com>

	* tests/testcombo.c: Some trees in combo boxes.

	* gtk/gtkcombobox.c: Rework the combo box to handle 
	tree models.  (#139582, Matt Walton)
	
	* gtk/gtktreeview.h: 
	* gtk/gtktreeview.c: 
	* gtk/gtktreeprivate.h: Add a new boolean property 
	::hover-expand and make the treeview expand/collapse rows
	on mouseover if it is set.

	* gtk/gtkiconview.h: Remove some erroneous declarations.

	* gtk/gtkcellview.c (gtk_cell_view_set_cell_data): Don't
	crash if the displayed row is gone.

2004-08-02  Morten Welinder  <terra@gnome.org>

	* gtk/gtkentry.c (gtk_entry_motion_notify): C99ism.

Mon Aug  2 01:30:03 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktextview.[hc]: 
	* gtk/gtkentry.[hc]: Add a new binding signal ::backspace,
	bind it to the backspace key, and make it pay attention 
	to the Pango backspace_deletes_character 
	attribute.  (#119891, Noah Levitt, patch by Theppitak 
	Karoonboonyanan)

Mon Aug  2 01:02:57 2004  Matthias Clasen  <maclas@gmx.de>

	* gdk/x11/gdkevents-x11.c (gdk_check_wm_state_changed): 
	(gdk_check_wm_desktop_changed): Add missing error 
	traps.  (#149011, Thomas Leonard)

Mon Aug  2 00:21:26 2004  Matthias Clasen  <maclas@gmx.de>
