@@ -775,8 +775,8 @@ void            gtk_requisition_free     (GtkRequisition       *requisition);
 #  define gtk_widget_unref gtk_object_unref
 #endif	/* GTK_TRACE_OBJECTS && __GNUC__ */
 
-void              _gtk_widget_emit_grab_notify           (GtkWidget    *widget,
-							  gboolean	was_grabbed);
+void              _gtk_widget_grab_notify                 (GtkWidget    *widget,
+						           gboolean	was_grabbed);
 
 GtkWidgetAuxInfo *_gtk_widget_get_aux_info                (GtkWidget    *widget,
 							   gboolean      create);
